Integración clima + Gemini Flash V1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,4 +16,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # Google GenAI Configuration
-gemini.api.key=YOUR_API_KEY_HERE
+gemini.api.key=AIzaSyCSsEsQN2k3Oy-J423f6LQ0ZMM_hNiTL_w
+gemini.model.name=models/gemini-2.5-flash
